# Model-Experiments

./: .gitignore  CLAUDE.md  CONVENTIONS.md  README.md  pyproject.toml
.github/: SETUP.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  intent.yml
.github/workflows/: auto-merge.yml  ci.yml
projects/: README.md
projects/em-piml/: CLAUDE.md  pyproject.toml
projects/em-piml/src/em_piml/: __init__.py  embeddings.py  model.py  num_bands_sweep.py  physics.py  point_draw_sweep.py  train.py
projects/em-piml/tests/: test_baseline_cavity.py  test_causal_long_horizon.py  test_fourier_embedding.py  test_fourier_lbfgs.py  test_fourier_soap.py  test_num_bands_sweep.py  test_point_draw_seed.py  test_pseudo_sequence.py  test_two_mode_superposition.py
tools/: README.md
tools/datasets/: pyproject.toml
tools/datasets/registry/: em-piml-1d-cavity-analytical.toml  example-smoke-test.toml
tools/datasets/registry/generators/: em_piml_1d_cavity_analytical.py  example_smoke_test.py
tools/datasets/src/mx_datasets/: __init__.py  cli.py  registry.py
tools/datasets/tests/: test_cli.py
