[project]
name = "mx-datasets"
version = "0.1.0"
description = "Repo-wide dataset registry, fetch, and verification CLI for Model-Experiments"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mx-data = "mx_datasets.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mx_datasets"]

[dependency-groups]
dev = ["pytest>=8"]
